<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="215dp"
        android:layout_height="24dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="140dp"
        android:text="@string/text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="215dp"
        android:layout_height="24dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="48dp"
        android:text="@string/text2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barSum" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="215dp"
        android:layout_height="24dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="48dp"
        android:text="@string/text3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barTime" />

    <SeekBar
        android:id="@+id/barSum"
        android:layout_width="281dp"
        android:layout_height="28dp"
        android:layout_marginStart="56dp"
        android:isScrollContainer="false"
        android:max="1000000"
        android:min="3000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sumView" />

    <SeekBar
        android:id="@+id/barTime"
        android:layout_width="281dp"
        android:layout_height="28dp"
        android:layout_marginStart="56dp"
        android:max="36"
        android:min="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeView" />

    <SeekBar
        android:id="@+id/barValue"
        android:layout_width="281dp"
        android:layout_height="28dp"
        android:layout_marginStart="56dp"
        android:max="300000"
        android:min="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valueView" />

    <TextView
        android:id="@+id/sumView"
        android:layout_width="213dp"
        android:layout_height="23dp"
        android:layout_marginStart="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/timeView"
        android:layout_width="213dp"
        android:layout_height="23dp"
        android:layout_marginStart="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/valueView"
        android:layout_width="213dp"
        android:layout_height="23dp"
        android:layout_marginStart="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="95dp"
        android:layout_height="21dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="48dp"
        android:text="@string/text4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barValue" />

    <TextView
        android:id="@+id/percentView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/barValue" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="60dp"
        android:text="@string/text7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>