<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculationActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="131dp"
        android:layout_height="23dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="236dp"
        android:text="@string/text5"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/benefitView"
        android:layout_width="117dp"
        android:layout_height="26dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/fullSumView"
        android:layout_width="117dp"
        android:layout_height="26dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="44dp"
        android:text="@string/text8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullSumView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="221dp"
        android:layout_height="30dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="44dp"
        android:text="@string/text6"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/benefitView" />

</androidx.constraintlayout.widget.ConstraintLayout>